// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelIcon renders with color error 1`] = `
<span
  className="ax-label__icon"
>
  <a
    className="ax-link ax-link--style-night"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;

exports[`LabelIcon renders with color success 1`] = `
<span
  className="ax-label__icon"
>
  <a
    className="ax-link ax-link--style-night"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;

exports[`LabelIcon renders with color white 1`] = `
<span
  className="ax-label__icon"
>
  <a
    className="ax-link ax-link--style-subtle"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;

exports[`LabelIcon renders with defaultProps 1`] = `
<span
  className="ax-label__icon"
>
  <a
    className="ax-link ax-link--style-normal"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;

exports[`LabelIcon renders with end spacing 1`] = `
<span
  className="ax-label__icon ax-label__icon--end"
>
  <a
    className="ax-link ax-link--style-normal"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;

exports[`LabelIcon renders with start spacing 1`] = `
<span
  className="ax-label__icon ax-label__icon--start"
>
  <a
    className="ax-link ax-link--style-normal"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
      style={
        Object {
          "height": "1rem",
          "width": "1rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </a>
</span>
`;
